--- a/index.html
+++ b/index.html
@@ -1,39 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Mentor | Intro section with dropdown navigation</title>
+    <link rel="stylesheet" href="./sass/main.css" />
+    <link rel="stylesheet" href="./auxiliar.css" />
+  </head>
+  <body>
+    <!-- Desktop navigation-->
+    <nav>
+      <div class="nav-container">
+        <div class="nav-left">
+          <div class="nav-logo">
+            <img src="./images/logo.svg" alt="logo" />
+          </div>
+          <ul class="nav-links">
+            <li>
+              Features
+              <img
+                class="arrow"
+                src="./images/icon-arrow-down.svg"
+                alt="arrow down"
+              />
+              <div class="sub-menu-one">
+                <p class="sub-link">
+                  <img src="./images/icon-todo.svg" alt="todo icon" />
+                  Todo List
+                </p>
+                <p class="sub-link">
+                  <img src="./images/icon-calendar.svg" alt="calendar icon" />
+                  Calendar
+                </p>
+                <p class="sub-link">
+                  <img src="./images/icon-reminders.svg" alt="reminders icon" />
+                  Reminders
+                </p>
+                <p class="sub-link">
+                  <img src="./images/icon-planning.svg" alt="planning icon" />
+                  Planning
+                </p>
+              </div>
+            </li>
+            <li>
+              Company
+              <img
+                class="arrow"
+                src="./images/icon-arrow-down.svg"
+                alt="arrow down"
+              />
+              <div class="sub-menu-two">
+                <p class="sub-link">History</p>
+                <p class="sub-link">Our Team</p>
+                <p class="sub-link">Blog</p>
+              </div>
+            </li>
+            <li>Careers</li>
+            <li>About</li>
+          </ul>
+        </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
+        <!-- Mobile navigation begins-->
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <div class="mobile-menu-button">
+          <img src="./images/icon-menu.svg" alt="burguer menu" />
+        </div>
 
-  Features
-  Company
-  Careers
-  About
+        <div class="mobile-menu">
+          <ul class="mobile-links">
+            <li>
+              <p>
+                Features
+                <img
+                  class="arrow"
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow down"
+                />
+              </p>
+              <div class="mobile-sub">
+                <p class="sub-link">
+                  <img src="./images/icon-todo.svg" alt="todo icon" />
+                  Todo List
+                </p>
+                <p class="sub-link">
+                  <img src="./images/icon-calendar.svg" alt="calendar icon" />
+                  Calendar
+                </p>
+                <p class="sub-link">
+                  <img src="./images/icon-reminders.svg" alt="reminders icon" />
+                  Reminders
+                </p>
+                <p class="sub-link">
+                  <img src="./images/icon-planning.svg" alt="planning icon" />
+                  Planning
+                </p>
+              </div>
+            </li>
+            <li>
+              <p>
+                Company
+                <img
+                  class="arrow"
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow down"
+                />
+              </p>
+              <div class="mobile-sub">
+                <p class="sub-link">History</p>
+                <p class="sub-link">Our Team</p>
+                <p class="sub-link">Blog</p>
+              </div>
+            </li>
+            <li>Careers</li>
+            <li>About</li>
+          </ul>
+        </div>
 
-  Login
-  Register
+        <!-- Mobile navigation finishes-->
 
-  Make remote work
+        <!-- Desktop navigation continues -->
 
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
+        <div class="nav-right">
+          <button class="transparent-btn">Login</button>
+          <button class="outlined-btn">Register</button>
+        </div>
 
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <!-- Desktop navigation finishes -->
+      </div>
+    </nav>
+
+    <main>
+      <div class="main-container">
+        <div class="main-left">
+          <h1 class="main-heading">
+            Make <br />
+            remote work
+          </h1>
+          <p class="main-content">
+            Get your team in sync, no matter your location. Streamline
+            processes, create team rituals, and watch productivity soar
+          </p>
+          <button class="primary-button">Learn more</button>
+          <div class="logos">
+            <img src="./images/client-databiz.svg" alt="logo1" />
+            <img src="./images/client-audiophile.svg" alt="logo2" />
+            <img src="./images/client-meet.svg" alt="logo3" />
+            <img src="./images/client-maker.svg" alt="logo4" />
+          </div>
+        </div>
+        <div class="main-right">
+          <picture
+            ><source
+              media="(max-width:800px)"
+              srcset="./images/image-hero-mobile.png" />
+            <img src="./images/image-hero-desktop.png" alt="hero"
+          /></picture>
+        </div>
+      </div>
+    </main>
+    <div class="overflow"></div>
+  </body>
 </html>
