css and js were added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
-    <link rel="stylesheet" href="./sass/main.css" />
     <link rel="stylesheet" href="./auxiliar.css" />
   </head>
   <body>
@@ -23,7 +22,7 @@
                 src="./images/icon-arrow-down.svg"
                 alt="arrow down"
               />
-              <div class="sub-menu-one">
+              <div class="sub-menu one">
                 <p class="sub-link">
                   <img src="./images/icon-todo.svg" alt="todo icon" />
                   Todo List
@@ -49,7 +48,7 @@
                 src="./images/icon-arrow-down.svg"
                 alt="arrow down"
               />
-              <div class="sub-menu-two">
+              <div class="sub-menu two">
                 <p class="sub-link">History</p>
                 <p class="sub-link">Our Team</p>
                 <p class="sub-link">Blog</p>
@@ -62,7 +61,7 @@
 
         <!-- Mobile navigation begins-->
 
-        <div class="mobile-menu-button">
+        <div class="mobile-menu-btn">
           <img src="./images/icon-menu.svg" alt="burguer menu" />
         </div>
 
@@ -140,7 +139,7 @@
             Get your team in sync, no matter your location. Streamline
             processes, create team rituals, and watch productivity soar
           </p>
-          <button class="primary-button">Learn more</button>
+          <button class="primary-btn">Learn more</button>
           <div class="logos">
             <img src="./images/client-databiz.svg" alt="logo1" />
             <img src="./images/client-audiophile.svg" alt="logo2" />
@@ -159,5 +158,6 @@
       </div>
     </main>
     <div class="overflow"></div>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
