desktop view was corrected

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </h1>
           <p class="main-content">
             Get your team in sync, no matter your location. Streamline
-            processes, create team rituals, and watch productivity soar
+            processes, create team rituals, and watch productivity soar.
           </p>
           <button class="primary-btn">Learn more</button>
           <div class="logos">
@@ -148,12 +148,16 @@
           </div>
         </div>
         <div class="main-right">
-          <picture
-            ><source
-              media="(max-width:800px)"
-              srcset="./images/image-hero-mobile.png" />
-            <img src="./images/image-hero-desktop.png" alt="hero"
-          /></picture>
+          <img
+            class="desktop-image"
+            src="./images/image-hero-desktop.png"
+            alt="image"
+          />
+          <img
+            class="mobile-image"
+            src="./images/image-hero-mobile.png"
+            alt="image"
+          />
         </div>
       </div>
     </main>
