sass was implemented using modularization

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
-    <link rel="stylesheet" href="./auxiliar.css" />
+    <link rel="stylesheet" href="./sass/main.css" />
   </head>
   <body>
     <!-- Desktop navigation-->
@@ -113,6 +113,8 @@
             <li>Careers</li>
             <li>About</li>
           </ul>
+          <button class="transparent-btn">Login</button>
+          <button class="outlined-btn">Register</button>
         </div>
 
         <!-- Mobile navigation finishes-->
